# audio

./: README.md  TODO.md
audio/: .gitignore  main.py  pyproject.toml  requirements.txt
audio/notebooks/: week1.ipynb
audio/outputs/: history.json
audio/src/: __init__.py  agent.py  api.py  audio_merger.py  script_generator.py  voice_generator.py
audio/src/audio_ai_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
audio/src/dialogue/: dialogue_builder.py  voice_mapper.py
audio/src/music_handler/: mood_detector.py  music_handler.py
audio/src/utils/: file_utils.py  history.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Notification.jsx  Sidebar.jsx  TrackCard.jsx
frontend/src/pages/: History.jsx  Landing.jsx
outputs/: history.json
src/: agent.py  api.py
src/utils/: history.py
